# blospray

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  __init__.py  blender_render_engine.2.8.py  blender_render_engine.279.py  blender_render_engine.docs.py  blender_render_engine.py  blender_render_engine.stats.py  blender_render_engine.trace.py  blospray.2.8.py  blospray.sublime-project  blospray.sublime-workspace  bugs.txt  changelog.md  config.h.in  control.py  cosmogrid128.blend  dof.blend  flow.txt  gdb_server.sh  genprotobufpython.sh  image.cpp  image.h  isovalues.blend  lights.blend  list_ui_panels.py  messages.proto  mktags.sh  mummy.128.raw  nodes.py  notes.txt  ospray_render_server.cpp  panels.txt  protocol.txt  readme.md  readme.txt  run_server.sh  stbuild.sh  (+10 more)
core/: CMakeLists.txt  blocking_queue.h  bounding_mesh.cpp  bounding_mesh.h  bounding_mesh.impl  cool2warm.h  image.cpp  image.h  messages.proto  ospray_render_server.cpp  plugin.h  plugin2.h  scene.h  tcpsocket.h  util.h  util_internal.h
docs/: api2.txt  datasync.md  examples.md  notes.txt  panels.txt  protocol2.txt  release.txt  renderengine-events.txt  renderengine-notes.txt  rendering_types.txt  scenes.txt  sciviz.md  todo.txt
faker/: CMakeLists.txt  faker.cpp  parse.py
plugins/: CMakeLists.txt  geometry_assimp.cpp  geometry_cosmogrid.cpp  geometry_hyg_stars.cpp  geometry_plane.cpp  geometry_plane2.cpp  geometry_ply.cpp  geometry_rbc.cpp  geometry_triangles.cpp  geometry_unit_plane.cpp  geometry_vtk_streamlines.cpp  scene_boxes.cpp  scene_cornellbox.cpp  scene_cosmogrid.cpp  scene_gravity_spheres_volume.cpp  scene_rbc.cpp  volume_disney_cloud.cpp  volume_hdf5.cpp  volume_raw.cpp  volume_testing.cpp
render_ospray/: __init__.py  common.py  connection.py  engine.py  messages_pb2.py  nodes.py  operators.py  properties.py  sync.py  ui.py
scripts/: blender_render_engine.docs.py  blender_render_engine.dot.py  blender_render_engine.stats.py  blender_render_engine.trace.py  blender_render_engine.trace2.py  get_server_state.py  hygcsv2json.py  list_ui_panels.py  t_thread_start.py  test_cam_anim.blend
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  arealight.blend  assimp.blend  bmw27_cpu.original.blend  bmw27_cpu.ospray.blend  boxes.blend  cornellbox-updated-but-broken.blend  cornellbox.blend  cosmo_particles.blend  cosmo_particles2.blend  cosmogrid128.blend  cosmogrid128.debug.blend  ctscan.blend  disney_cloud.blend  dof.blend  gravity_spheres_volume.blend  grid.blend  holeintheroof.blend  hyg_stars.blend  instances.blend  isovalues.blend  isovalues2.blend  lights.blend  material.blend  metals.blend  modifiers.blend  objects.blend  ospTutorial.c  ospTutorial.crop.c  ospTutorial.pointlight.c  ospTutorial.spherelight.c  panoramic.blend  parenting.blend  plane_geometry.blend  ply.blend  rbc.blend  reworked.blend  slice.blend  t_bmesh_bbox.blend  t_bmesh_bbox.py  (+11 more)
